--- a/front-end-project/package.json
+++ b/front-end-project/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.38",
     "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   }
