--- a/front-end-project/package.json
+++ b/front-end-project/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -26,6 +27,7 @@
     "postcss": "^8.4.38",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
